
# Add new files in alphabetical order. Thanks.
libwealth_src = wealth.c financial-item.c financial-profile.c 

# Add new files in alphabetical order. Thanks.
libwealth_headers = wealth.h

library_includedir      = $(includedir)/libwealth/
library_include_HEADERS = $(libwealth_headers)

# Library
lib_LTLIBRARIES                           = $(top_builddir)/lib/libwealth.la 
__top_builddir__lib_libwealth_la_SOURCES = $(libwealth_src)
__top_builddir__lib_libwealth_la_LIBADD  = -lcollections -lm

